--- a/style.css
+++ b/style.css
@@ -3,4 +3,15 @@
     border-color: black;
 }
 
+.bildspel {
+    width: 15em;
+    height: 15em;
+    margin-left: 3em;
+    
+}
+
+#bilder
+{
+    border-style: solid;
+}
 
