--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
+    text-shadow: grey, 2px;
+
+}
+
+.pilmenu {
+    width: 5%;
 }
 
 
