--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
-    text-shadow: grey, 2px;
 
 }
 
 .pilmenu {
-    width: 5%;
+    width: 2.5%;
+    margin-top: 10px;
+    
 }
 
 .bildspel {
