--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     background-image: linear-gradient(to right, rgb(3, 32, 124), rgb(19, 180, 230));
 }
 
+body{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: grey;
+    background-color: rgba(166, 200, 250, 0.527);
+}
+
 #menu {
     border-style: none;
     color: rgb(248, 248, 248);
@@ -73,6 +79,7 @@ li{
 /*vilmas sida*/
 #vpre{
     margin-bottom: 25em;
+    margin-top: 2em;
     
 }
 
@@ -81,6 +88,7 @@ li{
     margin-right: 4em;
     margin-left: 2em;
 }
+
 #vdiagram{
     border-left: 0.5em solid grey;
     margin-left: 2em;
@@ -107,7 +115,6 @@ li{
 }
 
 #vstapel4{
-
     border: 0.3em cornflowerblue solid;
     background-color: cornflowerblue;
     margin-right: 18em;
@@ -123,13 +130,33 @@ li{
 
 #vnamn{
     color: white;
-    font-size: 3em;
+    font-size: 3.3em;
+    margin-top: 0.5em;
+    margin-bottom: 0,5em;
+    text-align: center;
 }
 
 #vmenu{
+    border: solid transparent;
+    border-left: none;
+    border-right: none;
     margin: 0%;
-    size: 10em;
 }
+
+#tabellrubrik{
+    color: grey;
+    font-size: 2em;
+    margin-left: 0.5em;
+}
+
+.tabelltext{
+    color: white;
+
+
+}
+
+
+
 #presentation{
     color: black;
 }
