--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 .grad {
-    background-image: linear-gradient(to right, rgb(3, 32, 124), rgb(19, 180, 230));
+    background-image: linear-gradient( rgb(160, 216, 233), rgb(47, 88, 99));
+}
+
+.grad2 {
+
+    background-image: linear-gradient( rgb(227, 237, 252), rgb(172, 210, 235), rgb(5, 131, 131));
 }
 
 body{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: grey;
-    background-color: rgba(166, 200, 250, 0.527);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(40, 75, 85);
 }
 
 #menu {
     border-style: none;
     color: rgb(248, 248, 248);
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
     margin: 0;
 
@@ -41,10 +44,7 @@ body{
 }
 
 #myLinks{
-    border-style: none;
-    border-top: white;
-    border-top-style: solid;
-    
+    border: none;
     margin-top: 0%;
     
 }
@@ -53,14 +53,16 @@ ul {
     list-style-type: none;
     text-align: center;
     font-size: 30px;
-    margin: 0;
-    background-image: linear-gradient(to right, rgb(3, 32, 124), rgb(19, 180, 230));
+    margin: 1em;
+    color: rgb(47, 88, 99);
+    border-bottom: dotted rgb(5, 131, 131);
 }
 
+
 a{
-    color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
+    color: rgb(40, 75, 85);
 }
 
 #text{
