--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body{
     color: rgb(40, 75, 85);
 }
 
+p{
+    font-size: 0.5em;
+}
+
 #menu {
     border-style: none;
     color: rgb(248, 248, 248);
@@ -76,7 +80,10 @@ li{
 #vpre{
     margin-bottom: 25em;
     margin-top: 2em;
-    
+}
+
+#vptext{
+    font-size: 1em;
 }
 
 #vilmabild{
@@ -91,8 +98,8 @@ li{
 }
 
 #vstapel1{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
+    border: 0.01em rgba(94, 40, 94, 0.541) solid;
+    background-color: rgba(182, 68, 182, 0.63);
     margin-right: 10em;
 }
 
@@ -197,6 +204,10 @@ li{
     font-size: 1em;
     margin-right: 40em;
 
+}
+
+#meddrubrik{
+    font-size: 1.5em;
 }
 
 label{
