--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .grad {
-    background-image: linear-gradient( rgb(160, 216, 233), rgb(70, 145, 155));
+    background-image: linear-gradient( rgb(160, 216, 233), rgb(79, 176, 189));
 }
 
 .grad2 {
@@ -17,11 +17,12 @@ p{
 }
 
 #menu {
-    border-style: none;
+    border: solid rgb(5, 131, 131) 0.01em;
     color: rgb(248, 248, 248);
     text-align: center;
     font-size: 50px;
     margin: 0;
+    text-shadow: 0.03em 0.03em rgb(85, 84, 84);
 
 }
 
