--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ p{
 }
 
 #menu {
-    border: solid rgb(5, 131, 131) 0.01em;
+    /* border: solid rgb(5, 131, 131) 0.01em; */
     color: rgb(248, 248, 248);
     text-align: center;
     font-size: 50px;
