--- a/style.css
+++ b/style.css
@@ -38,17 +38,21 @@ p{
     
 }
 
-.bildspel {
-    width: 15em;
-    height: 15em;
-    float: center;
+
+
+#bilder
+{
+    margin-right: 50%;
+    
+} 
+
+#bild4 {
+    width: 100%;
+    height: 100%;
+    padding-right: 50%;
+    padding-left: 50%;
     
 }
-
-/* #bilder
-{
-    border-style: solid;
-} */
 
 .show{
     display: none;
@@ -403,10 +407,6 @@ textarea{
     margin-bottom: 2em;
 }
 
-#bild4 {
-    width: 30em;
-    height: 10em;
-}
 
 
 @media screen and (min-width: 768px){
@@ -429,9 +429,6 @@ textarea{
 
 @media screen and (max-width: 765px) {
 
-#bild4 {
-
-    }    
 
 #kontakt{
     width: 70%;
