--- a/style.css
+++ b/style.css
@@ -43,14 +43,14 @@ p{
 #bilder
 {
     margin-right: 50%;
+    margin-left: 50%;
+    
     
 } 
 
 #bild4 {
-    width: 100%;
-    height: 100%;
-    padding-right: 50%;
-    padding-left: 50%;
+    width: 15em;
+    height: 15em;
     
 }
 
