--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ a{
 }
 
 /*vilmas sida*/
-#vpre{
+.vpre{
     margin-bottom: 25em;
     margin-top: 2em;
 }
@@ -363,28 +363,44 @@ textarea{
     text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 #astapel2{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 10em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 10%;
+    margin-top: 2em;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 #astapel3{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 10em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 8%;
+    margin-top: 2em;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 #astapel4{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 60em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 68%;
+    margin-top: 2em;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 #astapel5{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 10em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 14%;
+    margin-top: 2em;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 #amanda{
     float: left;
@@ -416,38 +432,53 @@ textarea{
 }
 
 #jstapel1{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 40em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 50%;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 
 #jstapel2{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 10em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 50%;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 
 #jstapel3{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 25em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 50%;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 
 #jstapel4{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 35em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 50%;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 
 #jstapel5{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 70em;
-    margin-bottom: 2em;
+    border: 0.04em ridge rgba(248, 248, 248, 0.185);
+    margin-right: 50%;
+    border-radius: 1.5em;
+    padding-left: 2em;
+    font-size: 0.83rem;
+    height: 4em;
+    text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
 
 #pic{
@@ -600,41 +631,6 @@ textarea{
     font-size: 2em;
     margin-bottom: 11em;
 
-}
-
-#jstapel1{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 40em;
-    margin-bottom: 2em;
-}
-
-#jstapel2{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 10em;
-    margin-bottom: 2em;
-}
-
-#jstapel3{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 25em;
-    margin-bottom: 2em;
-}
-
-#jstapel4{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 35em;
-    margin-bottom: 2em;
-}
-
-#jstapel5{
-    border: 0.3em cornflowerblue solid;
-    background-color: cornflowerblue;
-    margin-right: 70em;
-    margin-bottom: 2em;
 }
 
 a {
