--- a/style.css
+++ b/style.css
@@ -403,12 +403,15 @@ textarea{
     height: 4em;
     text-shadow: 0.03em 0.03em rgb(153, 153, 153);
 }
-#amanda{
+/* #amanda{
     width: 30%;
     height: auto;
-}
+} */
+
 #amanda{
     float: left;
+    width: 20%;
+    height: auto;
 
 }
 #dataMeny{
