--- a/style.css
+++ b/style.css
@@ -2,14 +2,28 @@
     background-image: linear-gradient( rgb(139, 235, 241), rgb(79, 176, 189));
 }
 
+
 .grad2 {
-    background-image: linear-gradient( rgb(227, 237, 252), rgb(145, 221, 240), rgb(24, 167, 167));
+    background-image: linear-gradient( rgb(227, 237, 252), rgb(119, 179, 219), rgb(24, 134, 167));
 }
 
 .grad3 {
     background-image: linear-gradient(rgb(67, 167, 167), rgb(140, 212, 212), rgba(56, 156, 160, 0.644));
 }
+.header{
+    background-image: url("/images/himmel.jpg");
+    /* background-color: black; */
+    width: 100%;
+    height: 10em;
+}
 
+#headertext{
+    font-size: 4em;
+    color: rgb(56, 156, 160);
+    padding-top: 1em;
+    text-align: center;
+    margin: 0%;
+}
 
 body{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
