--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 .grad2 {
-    background-image: linear-gradient( rgb(227, 237, 252), rgb(119, 179, 219), rgb(24, 134, 167));
+    background-image: linear-gradient( rgb(203, 221, 248), rgb(99, 184, 233), rgb(52, 164, 228));
 }
 
 .grad3 {
@@ -14,20 +14,20 @@
     background-image: url("/images/himmel.jpg");
     /* background-color: black; */
     width: 100%;
-    height: 10em;
+    height: 14em;
 }
 
 #headertext{
     font-size: 4em;
-    color: rgb(56, 156, 160);
+    color: rgb(33, 100, 139);
     padding-top: 1em;
     text-align: center;
     margin: 0%;
 }
 
 body{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: rgb(40, 75, 85);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(33, 100, 139);
 }
 
 p{
@@ -38,6 +38,9 @@ p{
     font-size: 1em;
 }
 
+.link{
+    font-size: 1.2em;
+}
 
 #pic{
     width: 50%;
@@ -60,14 +63,10 @@ p{
     
 }
 
-
-
 #bilder
 {
-    
     margin-left: 30%;
     margin-right: 30%;
-    
     
 } 
 
@@ -86,27 +85,25 @@ p{
     text-align: center;
     font-size: 30px;
     margin: 1em;
-    color: rgb(47, 88, 99);
+    color: rgb(33, 100, 139);
     border-bottom: dotted rgb(5, 131, 131);
 }
 
-a{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-decoration: none;
-    color: rgb(40, 75, 85);
+.listlink{
+    margin-right: 1em;
+    margin-left: 1em;
 }
 
 #myLinks{
     font-size: 2em;
     list-style-type: none;
+    color: rgb(33, 100, 139);
 }
+
 #myLinks :hover{
     color: black;
 }
-#datameny{
-    padding-top: 2em;
-    padding-bottom: 2em;
-}
+
 
 #text{
     font-size: 2em;
@@ -114,7 +111,6 @@ a{
 
 #welcome{
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #infoText {
@@ -359,7 +355,7 @@ textarea{
 }
 
 #submit{
-    color: rgb(47, 88, 99);
+    color: rgb(33, 100, 139);
     padding: 0.6em 2em;
 }
 #vBild{
@@ -432,8 +428,7 @@ textarea{
 
 }
 #dataMeny{
-    border-style: solid;
-    border-color:rgb(47,88, 99);
+    border-bottom: solid rgb(33, 100, 139);
     text-align: center;
     /* padding-bottom: 1em;
     padding-top: 1em; */
@@ -559,6 +554,11 @@ textarea{
         margin-left: 50%;
         margin-top: 10%;
     } 
+
+    #dataMeny{
+        height: 4em;
+        padding-top: 1.3em;
+    }
     
 }
 
@@ -664,9 +664,9 @@ textarea{
 }
 
 a {
-    color: rgb(47, 88, 99);
-    text-decoration: underline;
+    color: rgb(33, 100, 139);
     margin-right: 1em;
+    text-decoration: none;
 }
 
 .diagram{
