--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .grad {
-    background-image: linear-gradient( rgb(139, 235, 241), rgb(79, 176, 189));
+    background-image: linear-gradient( rgb(156, 224, 241), rgb(33, 100, 139));
 }
 
 
@@ -20,7 +20,8 @@
 #headertext{
     font-size: 4em;
     color: rgb(33, 100, 139);
-    padding-top: 1em;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
     text-align: center;
     margin: 0%;
 }
@@ -48,7 +49,7 @@ p{
 }
 
 #menu {
-    border: solid rgb(5, 131, 131) 0.01em;
+    border: rgb(33, 100, 139)0.01em;
     color: rgb(248, 248, 248);
     text-align: center;
     font-size: 50px;
@@ -582,6 +583,11 @@ textarea{
 #meddrubrik{
     font-size: 100%;
 }
+
+.header{
+    height: 12em;
+}
+
 
 /*Personligt sida*/
 
