--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     background-image: linear-gradient( rgb(156, 224, 241), rgb(33, 100, 139));
 }
 
+.grad1 {
+    background-image: linear-gradient( rgb(156, 224, 241), rgb(33, 100, 139));
+}
 
 .grad2 {
     background-image: linear-gradient( rgb(203, 221, 248), rgb(99, 184, 233), rgb(52, 164, 228));
@@ -41,6 +44,13 @@ p{
 .link{
     font-size: 1.2em;
 }
+
+a {
+    color: rgb(33, 100, 139);
+    margin-right: 1em;
+    text-decoration: none;
+}
+
 
 #pic{
     width: 50%;
@@ -524,6 +534,7 @@ textarea{
 }
 
 
+
 @media screen and (min-width: 768px){
     #menu{
         display: none;
@@ -555,8 +566,18 @@ textarea{
         height: 4em;
         padding-top: 1.3em;
     }
+    a{
+    color: white;
+    }
+
+    #dataMeny{
+        background-image: linear-gradient( rgb(156, 224, 241), rgb(33, 100, 139));
+    }
+
     
 }
+
+
 
 @media screen and (max-width: 765px) {
 
@@ -616,11 +637,17 @@ textarea{
 
 }
 
+.grad1{
+    background-image: 0;
+}
+
 
 /* Startsida */
 #text{
     font-size: 1.5em;
 }
+
+
 
 /* presentationsida */
 
@@ -664,11 +691,6 @@ textarea{
 
 }
 
-a {
-    color: rgb(33, 100, 139);
-    margin-right: 1em;
-    text-decoration: none;
-}
 
 .diagram{
     width: 600px;
