--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     background-image: linear-gradient(rgb(67, 167, 167), rgb(140, 212, 212), rgba(56, 156, 160, 0.644));
 }
 .header{
-    background-image: url("/images/himmel.jpg");
+    background-image: url("images/himmel.jpg");
     /* background-color: black; */
     width: 100%;
     height: 14em;
