--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ a {
 }
 
 
-#pic{
+#gruppBild{
     width: 50%;
-    height: auto;
+    height: 50%;
 }
 
 #menu {
@@ -81,8 +81,8 @@ a {
 } 
 
 #bild4 {
-    width: 15em;
-    height: 15em;
+    width: 100%;
+    height: 100%;
     
 }
 
