jonte sida fixad

--- a/style.css
+++ b/style.css
@@ -103,9 +103,6 @@ a {
     color: rgb(33, 100, 139);
 }
 
-#myLinks :hover{
-    color: ;
-}
 
 #textfield {
     width: 90%;
@@ -443,20 +440,6 @@ textarea{
 
 /* Jontes sida */
 
-#jontebild{
-
-    width: 15em;
-    height: 23em;
-    margin: 2em;
-    
-}
-
-#jtext{
-
-    font-size: 2em;
-    margin-bottom: 11em;
-
-}
 
 #jstapel1{
     border: 0.04em ridge rgba(248, 248, 248, 0.185);
@@ -534,6 +517,19 @@ textarea{
     color: black;
 }
 
+#jontebild{
+    float: left;
+    width: 15em;
+    height: 23em;
+    margin: 2em;
+}
+
+#jtext{
+
+    font-size: 2em;
+    margin-bottom: 11em;
+
+}
 
 
 @media screen and (min-width: 768px){
@@ -674,25 +670,20 @@ textarea{
     margin: auto;
 }
 
+#jontebild {
+    float: none;
+}
+
+#jtext {
+    margin-bottom: 1em;
+}
+
 }
 
 
 /* Jontes sida */
 
-#jontebild{
 
-    width: 15em;
-    height: 23em;
-    margin: 2em;
-    float: left;
-}
-
-#jtext{
-
-    font-size: 2em;
-    margin-bottom: 11em;
-
-}
 
 
 .diagram{
