--- a/style.css
+++ b/style.css
@@ -274,10 +274,6 @@ a {
     color: white;
 }
 
-#presentation{
-    color: black;
-}
-
 .presentation{
     text-align: center;
 }
@@ -289,7 +285,6 @@ a {
     width:  10%;
     height: 20%;
 }
-
 
 #jBild{
     display: none;
@@ -517,10 +512,6 @@ textarea{
     font-size: 100%;
 }
 
-.animate :hover{
-    color: black;
-}
-
 #jontebild{
     float: left;
     width: 15em;
@@ -568,7 +559,7 @@ textarea{
         padding-top: 1.3em;
     }
 
-    a{
+    .link{
     color: white;
     text-shadow: 0.03em 0.03em rgb(153, 153, 153);
     }
@@ -695,6 +686,11 @@ textarea{
     height: 300px;
     display: block;
 }
+
+.animate :hover{
+    color: rgb(15, 49, 70);
+}
+
 
 
 /*
