--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ a {
 } 
 
 #bild4 {
-    width: 100%;
-    height: 100%;
+    width: 15em;
+    height: 15em;
     
 }
 
@@ -229,7 +229,7 @@ a {
 
 }
 
-.div1{
+.preSpan{
     float: left;
 }
 
@@ -505,9 +505,6 @@ textarea{
     font-size: 1em;
 }
 
-/* #namnp h1{
-    font-size: 100%;
-}  */
 
 #presentation h2{
     font-size: 100%;
@@ -660,6 +657,11 @@ textarea{
 
 /* presentationsida */
 
+#bild4 {
+    width: 10em;
+    height: 10em;
+    
+}
 
 
 
